--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	    		</div>
 				<p class="reference">
 					<small class="reference"><i>
-						Water speciation models from Lesne et al. (2010) <sup>†</sup> and Zhang et al. (1997) <sup>††</sup>
+						Water speciation models from Zhang et al. (1997) <sup>†</sup> and Lesne et al. (2010) <sup>††</sup>
 					</i></small>
 				</p>
 			</div>
