--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <body>
 	<div class="body-wrapper">
-		<h2 class="Apatite_header"><b>APATITE THERMODYNAMIC MODEL<br>FOR CALCULATING VOLATILE ABUNDANCES IN MAGMAS</b></h2>
+		<h2 class="Apatite_header"><b>APATITE THERMODYNAMIC MODEL<br>FOR CALCULATING WATER CONCENTRATIONS IN MAGMAS</b></h2>
 		<div class="Instruction">
 			<b>Instruction:<br><br></b>
-			This thermodynamic model can be used to calculate the abundances of water in silicate melts, using volatile composition of apatite (F, Cl, H<sub>2</sub>O), and the equations for the exchange coefficient (K<sub>D</sub>) reported in the paper below.<br><br>
+			This model can be used to calculate the abundances of water in silicate melts using concentrations of volatiles (F, Cl, H<sub>2</sub>O) in apatite, and the equations for the exchange coefficients (K<sub>D</sub>) for OH-Cl, OH-F, and Cl-F proposed by:<br><br>
 			<div class="Information">
 				<i>Li W. and Costa F. (2020). A thermodynamic model for F-Cl-OH partitioning between silicate melts and apatite including non-ideal mixing with application to constraining melt volatile budgets. Geochimica et Cosmochimica Acta 269, 203-222. <br>
-				<a href="">https://doi.org/10.1016/j.gca.2019.10.035</a></i>
+				<a href="">DOI: 10.1016/j.gca.2019.10.035</a></i>
+				<i>[Updates: We have recently created an excel spreadsheet for "ApThermo", which is useful for performing calculations on multiple samples. Feel free to request this spreadsheet from Weiran Li.]</i><p>
 			<p>
 			</div>
 		</div><br>
@@ -163,7 +164,7 @@
 		<div class="info">
 			<span>You are visitor number </span>
 			<b><script type="text/javascript" src="counter/counter.php?page=count"></script><b><br>
-			<span>If you encounter any problem using this webpage, please email me: <b>weiranli1991@gmail.com</b></span>
+			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>weiran.li@ntu.edu.sg</b></span>
 		</div>
 	</div>
 </body>
