--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			This model can be used to calculate the abundances of water in silicate melts using concentrations of volatiles (F, Cl, H<sub>2</sub>O) in apatite, and the equations for the exchange coefficients (K<sub>D</sub>) for OH-Cl, OH-F, and Cl-F proposed by:<br><br>
 			<div class="Information">
 				<i>Li W. and Costa F. (2020). A thermodynamic model for F-Cl-OH partitioning between silicate melts and apatite including non-ideal mixing with application to constraining melt volatile budgets. Geochimica et Cosmochimica Acta 269, 203-222. <br>
-				<a href="">DOI: 10.1016/j.gca.2019.10.035</a></i>
+				<a href="">DOI: 10.1016/j.gca.2019.10.035</a></i><p>
 				<i>[Updates: We have recently created an excel spreadsheet for "ApThermo", which is useful for performing calculations on multiple samples. Feel free to request this spreadsheet from Weiran Li.]</i><p>
 			<p>
 			</div>
