--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<div class="info">
 			<span>You are visitor number </span>
 			<b><script type="text/javascript" src="counter/counter.php?page=count"></script><b><br>
-			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>weiran.li@ntu.edu.sg</b></span>
+			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>wl413@cam.ac.uk</b></span>
 		</div>
 	</div>
 </body>
