--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			This model can be used to calculate the abundances of water in silicate melts using concentrations of volatiles (F, Cl, H<sub>2</sub>O) in apatite, and the equations for the exchange coefficients (K<sub>D</sub>) for OH-Cl, OH-F, and Cl-F proposed by:<br><br>
 			<div class="Information">
 				<i>Li W. and Costa F. (2020). A thermodynamic model for F-Cl-OH partitioning between silicate melts and apatite including non-ideal mixing with application to constraining melt volatile budgets. Geochimica et Cosmochimica Acta 269, 203-222. DOI: 10.1016/j.gca.2019.10.035</i><p>
-				<b>[Updates: there are also excel spreadsheet, MATLAB and python codes for "ApThermo". The files will be made public in 2022. Feel free to request for them in advance from Weiran Li: wl413@cam.ac.uk]<br></b><p>
+				<b>[Updates: functions in this webpage are included in a python package called "pyAp" at Github (github.com/alexweiranli/pyAp) since February 2022. There's also an excel version that can be requested from Alex (Weiran Li) at: wl413@cam.ac.uk]<br></b><p>
 			<p>
 			</div>
 		</div><br>
