更新 index.html，修正字符集声明并添加访客计数

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<!-- <script charset="UTF-8" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.1.6/d3.min.js"></script> -->
 	<script charset="UTF-8" src="script/d3.min.js"></script>
-	<script charset="utf-8" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script charset="utf-8" src="script/ApThermo.js"></script>
+	<script charset="UTF-8" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script charset="UTF-8" src="script/ApThermo.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>Apatite Thermodynamic Model</title>
 </head>
@@ -161,7 +161,7 @@
 	</div>
 	<div class="footer-wrapper">
 		<div class="info">
-			<span>You are visitor number </span>
+			<span>You are visitor number 10086 </span>
 			<b><script type="text/javascript" src="counter/counter.php?page=count"></script><b><br>
 			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>wl413@cam.ac.uk</b></span>
 		</div>
