更新 index.html，修改联系邮箱为 weiranli@hku.hk

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			This model can be used to calculate the abundances of water in silicate melts using concentrations of volatiles (F, Cl, H<sub>2</sub>O) in apatite, and the equations for the exchange coefficients (K<sub>D</sub>) for OH-Cl, OH-F, and Cl-F proposed by:<br><br>
 			<div class="Information">
 				<i>Li W. and Costa F. (2020). A thermodynamic model for F-Cl-OH partitioning between silicate melts and apatite including non-ideal mixing with application to constraining melt volatile budgets. Geochimica et Cosmochimica Acta 269, 203-222. DOI: 10.1016/j.gca.2019.10.035</i><p>
-				<b>[Updates: functions in this webpage are included in a python package called "pyAp" at Github (github.com/alexweiranli/pyAp) since February 2022. There's also an excel version that can be requested from Alex (Weiran Li) at: wl413@cam.ac.uk]<br></b><p>
+				<b>[Updates: functions in this webpage are included in a python package called "pyAp" at Github (github.com/alexweiranli/pyAp) since February 2022. There's also an excel version that can be requested from Alex (Weiran Li) at: weiranli@hku.hk]<br></b><p>
 			<p>
 			</div>
 		</div><br>
@@ -163,7 +163,7 @@
 		<div class="info">
 			<span>You are visitor number 10086 </span>
 			<b><script type="text/javascript" src="counter/counter.php?page=count"></script><b><br>
-			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>wl413@cam.ac.uk</b></span>
+			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>weiranli@hku.hk</b></span>
 		</div>
 	</div>
 </body>
