更新 index.html，移除访客计数中的数字

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 	</div>
 	<div class="footer-wrapper">
 		<div class="info">
-			<span>You are visitor number 10086 </span>
+			<span>You are visitor number </span>
 			<b><script type="text/javascript" src="counter/counter.php?page=count"></script><b><br>
 			<span>If you encounter any problem with this webpage, please contact Dr. Weiran (Alex) Li: <b>weiranli@hku.hk</b></span>
 		</div>
