change index.html, modify title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="body-wrapper">
-		<h2 class="Apatite_header"><b>APATITE THERMODYNAMIC MODEL<br>FOR CALCULATING WATER CONCENTRATIONS IN MAGMAS</b></h2>
+		<h2 class="Apatite_header"><b>ApThermo: APATITE THERMODYNAMIC MODEL<br>FOR CALCULATING WATER CONCENTRATIONS IN MAGMAS</b></h2>
 		<div class="Instruction">
 			<b>Instruction:<br><br></b>
 			This model can be used to calculate the abundances of water in silicate melts using concentrations of volatiles (F, Cl, H<sub>2</sub>O) in apatite, and the equations for the exchange coefficients (K<sub>D</sub>) for OH-Cl, OH-F, and Cl-F proposed by:<br><br>
