Title: "ApThermo: Apatite Thermodynamic Model"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script charset="UTF-8" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script charset="UTF-8" src="script/ApThermo.js"></script>
 	<link rel="stylesheet" href="style.css">
-	<title>Apatite Thermodynamic Model</title>
+	<title>ApThermo: Apatite Thermodynamic Model</title>
 </head>
 <body>
 	<div class="body-wrapper">
